fix: employee gap, font sizes

--- a/wp-content/themes/twentytwentytwo-child/blocks/employees/style.scss
+++ b/wp-content/themes/twentytwentytwo-child/blocks/employees/style.scss
@@ -46,7 +46,7 @@
 }
 
 .employees {
-	margin: 10px !important;
+	margin: 20px !important;
 	flex-wrap: wrap;
 
 	@media (min-width: 720px) {
